Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-118794

"The cached device pixel ratio value was stale on window expose" when opening context menu on macOS with external display

XMLWordPrintable

    • macOS
    • 97c12e3f2 (dev), 10397e535 (6.8), 4cdd9956f (6.7)

      MacOS 14.1

      Qt Creator 12.0.0-rc1 (11.0.84)

      Display details attached.

      Steps to reproduce:

      1. Open any example widgets app with context menu available, e.g.:
        1. https://doc.qt.io/qt-6/qtwidgets-tutorials-notepad-example.html
        2. https://doc.qt.io/qt-6/qtdoc-demos-documentviewer-example.html
      2. Connect the external display to the Mac.
      3. Move the app window to Mac native display (retina).
      4. Right-click to open the context menu. 

      Actual: Error shows up in the console:

      The cached device pixel ratio value was stale on window expose.  Please file a QTBUG which explains how to reproduce. 

      Reproducibility:  100% 

        For Gerrit Dashboard: QTBUG-118794
        # Subject Branch Project Status CR V

            sorvig Morten Sørvig
            lkos Łukasz Kosiorowski
            Votes:
            0 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes